# callable_scheduler

./: CMakeLists.txt  README.md  callable_scheduler.h  main.cpp  thread_pool.h
.github/workflows/: c-cpp.yml
tests/: CMakeLists.txt  callable_scheduler_tests.cpp  thread_pool_tests.cpp
